ver 0.19.9 (not yet released)
* decoder
  - dsdiff, dsf: raise ID3 tag limit to 1 MB
* fix clock integer overflow on OS X
* fix build failure with uClibc
* fix build failure on non-POSIX operating systems
* fix dependency issue on parallel Android build

ver 0.19.8 (2015/01/14)
* input
  - curl: fix bug after rewinding from end-of-file
  - mms: reduce delay at the beginning of playback
* decoder
  - dsdiff, dsf: allow ID3 tags larger than 4 kB
  - ffmpeg: support interleaved floating point
* fix clang 3.6 warnings
* fix build failure on NetBSD

ver 0.19.7 (2014/12/17)
* input
  - nfs: fix crash while canceling a failing file open operation
  - nfs: fix memory leak on connection failure
  - nfs: fix reconnect after mount failure
  - nfs: implement mount timeout (60 seconds)
* storage
  - nfs: implement I/O timeout (60 seconds)
* playlist
  - embcue: fix filename suffix detection
  - don't skip non-existent songs in "listplaylist"
* decoder
  - ffmpeg: fix time stamp underflow
* fix memory allocator bug on Windows

ver 0.19.6 (2014/12/08)
* decoder
  - ffmpeg: support FFmpeg 2.5
* fix build failure with musl
* android
  - update libFLAC to 1.3.1
  - update FFmpeg to 2.5

ver 0.19.5 (2014/11/26)
* input
  - nfs: fix crash on connection failure
* archive
  - zzip: fix crash after seeking
* decoder
  - dsdiff, dsf, opus: fix deadlock while seeking
  - mp4v2: remove because of incompatible license

ver 0.19.4 (2014/11/18)
* protocol
  - workaround for buggy clients that send "add /"
* decoder
  - ffmpeg: support opus
  - opus: add MIME types audio/ogg and application/ogg
* fix crash on failed filename charset conversion
* fix local socket detection from uid=0 (root)

ver 0.19.3 (2014/11/11)
* protocol
  - fix "(null)" result string to "list" when AlbumArtist is disabled
* database
  - upnp: fix breakage due to malformed URIs
* input
  - curl: another fix for redirected streams
* decoder
  - audiofile: fix crash while playing streams